Alignment Fix in Common Textbox
Alignment Fix in Common Textbox

--- a/Angular17_DemoProject/src/styles.css
+++ b/Angular17_DemoProject/src/styles.css
@@ -9,7 +9,9 @@
 {
     border: 1px solid lightgray;
     border-radius: 5px;
-    padding-top: 5px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .bolderLabel
